--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
-  text-align: center;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+.chat-container {
+    height: 100vh;
+    background: radial-gradient(circle at top right, hotpink, blue 60%) no-repeat fixed;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 10vh;
+    pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.chat-component {
+    margin: auto;
+    width: 33vw;
+    height: 50vh;
+    border-radius: 1%;
+    color: aliceblue;
+    border: 5px solid black;
+    background: black;
 }
