--- a/src/App.css
+++ b/src/App.css
@@ -26,9 +26,14 @@
 
 .chat-card {
     margin: auto;
-    margin-top: 2%;
+    margin-bottom: 2%;
     width: 95%;
     background: gray;
     padding: 2%;
     border-radius: 1%;
+}
+
+.user-name {
+    color: black;
+    padding: 1%;
 }
