--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 }
 
 .chat-component {
+    position: relative;
     margin: auto;
     width: 50%;
     height: 70%;
@@ -46,4 +47,11 @@
 svg {
     height: 5px;
     vertical-align: middle;
+}
+
+.user input{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-right: 1px solid black;
 }
