--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .chat-container {
@@ -14,16 +15,24 @@
 }
 
 .chat-component {
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    color: aliceblue;
+    /*border: 5px solid black;*/
+    background: black;
+    overflow: auto;
+    padding: 2%;
+    padding-bottom: 15%;
+}
+
+.chat-component-container{
     position: relative;
     margin: auto;
     width: 50%;
     height: 70%;
-    border-radius: 15px;
-    color: aliceblue;
-    border: 5px solid black;
-    background: black;
-    overflow: auto;
-    padding: 2%;
+    /*padding: 2%;*/
 }
 
 .chat-card {
@@ -49,9 +58,59 @@ svg {
     vertical-align: middle;
 }
 
-.user input{
+.input-area{
+    display: flex;
     position: absolute;
     bottom: 0;
     left: 0;
-    border-right: 1px solid black;
+    width: 100%;
+    /*border: 5px solid aliceblue;*/
+    border-bottom-left-radius: 5%;
+    border-bottom-right-radius: 5%;
+    background: white;
+    padding: 5% 0;
+    vertical-align: middle;
+}
+
+#user{
+    width: 15%;
+    font-weight: bold;
+    /*border-right: 1px solid black;*/
+    border: none;
+    padding: 2px 1%;
+    text-align: center;
+}
+
+#message{
+    width: 85%;
+    border: none;
+    text-wrap: normal;
+    resize: none;
+    padding: 2px 1%;
+}
+
+*:focus{
+    outline: none;
+}
+
+.counter{
+    position: absolute;
+    bottom: 2%;
+    right: 2%;
+    display: block;
+    color: gray;
+    font-size: smaller;
+
+}
+
+.submit-btn{
+    position: absolute;
+    bottom: -10%;
+    right: 0;
+    color: antiquewhite;
+    font-weight: bold;
+    border: 2px solid antiquewhite;
+    border-radius: 5px;
+    background: transparent;
+    padding: 2px 5%;
 }
