--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,7 @@
     background: gray;
     padding: 2%;
     border-radius: 15px;
+    word-wrap: break-word;
 }
 
 .user-name {
@@ -65,15 +66,15 @@ svg {
     left: 0;
     width: 100%;
     /*border: 5px solid aliceblue;*/
-    border-bottom-left-radius: 5%;
-    border-bottom-right-radius: 5%;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
     background: white;
-    padding: 5% 0;
+    padding: 15px 0;
     vertical-align: middle;
 }
 
 #user{
-    width: 15%;
+    /*width: 15%;*/
     font-weight: bold;
     /*border-right: 1px solid black;*/
     border: none;
